# Rugby_IA

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements.txt
.github/workflows/: ci.yml
config/: augmentations.yaml  config.yaml  logging_config.yaml
dashboard/: app.py
docs/: CI-CD.md
runs/detect/runs/detect/rugby_yolo_20260601_013530/: args.yaml
runs/detect/runs/detect/rugby_yolo_20260601_143040/: args.yaml
runs/detect/runs/detect/rugby_yolo_20260602_133906/: args.yaml  results.csv
scripts/: _download_roboflow_dataset_old.py  _poll_exports.py  _probe_api.py  _test_download.py  benchmark.py  download_roboflow_dataset.py  finetune_yolo_rugby.py  run_analysis.py  setup_cicd.py  setup_cicd.sh  test_cpu_setup.py  train_model.py
src/: __init__.py
src/analysis/: __init__.py  event_detector.py  heatmap_generator.py  pattern_recognizer.py  phase_classifier.py
src/api/: __init__.py  main.py
src/detection/: __init__.py  player_detector.py
src/ingestion/: __init__.py  video_downloader.py
src/pipeline/: __init__.py  realtime_pipeline.py
tests/: conftest.py  test_analysis.py  test_api.py  test_benchmark.py  test_detection.py
